Fri May 23 02:44:23 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/config-win32-common.h:
          Added ACE_HAS_VSWPRINTF define.  This should clear up some
          the tests/Malloc_Test failures for WCHAR builds.

Thu May 22 10:53:43 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/TemplateParser.pm:

          Make sure to apply the relative definitions to the flag override
          values.

Thu May 22 10:30:31 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/BorlandWorkspaceCreator.pm:
        * bin/MakeProjectCreator/modules/NMakeWorkspaceCreator.pm:

          If an mwc file contained a relative path to an mpc file or
          directory, these workspace creators would generate invalid
          workspaces.  This situation is accounted for now.

Thu May 22 15:29:02 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/TP_Reactor.cpp:
          Fixed typo on Windows.

Thu May 22 15:02:04 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tests/Signal_Test.cpp:
          Added include of ace/ACE.h to fix compile problem on AIX.

Thu May 22 13:16:11 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tests/Makefile.tests:
          Readded Multihomed_INET_Addr_Test that was mistakenly left out
          when the makefiles were reorganized.

        * tests/Proactor_Timer_Test.dsp:
        * tests/Service_Config_Tests.dsp:
        * tests/Test_Output.dsp:
          Fixed library path problems in Win32 Release builds.  Thanks to
          Simon McQueen <sm@prismtechnologies.com> for reporting this.

Thu May 22 12:52:59 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-mingw.h:
          Added define ACE_LACKS_NATIVE_STRPTIME

Thu May 22 07:35:23 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/README:
        * bin/MakeProjectCreator/USAGE:
